UI design, new font and disney logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="error_date_not_available">Date not available</string>
 
     <string name="description_avatar">Avatar</string>
+    <string name="description_logo">Disney Logo</string>
 
     <string name="heading_films">Películas</string>
     <string name="heading_shorts">Cortos</string>
