--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Ejercicio2CM</string>
 
     <string name="error_date_not_available">Date not available</string>
+    <string name="error_server_error">Server error, tap to try again.</string>
+    <string name="error_network_error">Network error, make sure you are connected to the internet. Tap to try again.</string>
+    <string name="error_unexpected_error">An unexpected error occurred, tap to try again.</string>
 
     <string name="description_avatar">Avatar</string>
     <string name="description_logo">Disney Logo</string>
